Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -3,7 +3,7 @@ title: Home
 sections:
     -
         template: richTextSection
-        text: "## All your projects in one place\n\nEver wonder why you have to run a completely separate CMS for every single project? We did too, and that's why HashBrown exists today. This is the new central brain for your extended project structure.\n\n![fba287ac5db41d6fcc2274943978864d89f2d194](/media/fba287ac5db41d6fcc2274943978864d89f2d194)"
+        text: "## All your projects in one place\n\nEver wonder why you have to run a completely separate CMS for every single project? We did too, and that's why HashBrown exists today. This is the new central brain for your extended project structure.\n\n![fba287ac5db41d6fcc2274943978864d89f2d194](/media/fba287ac5db41d6fcc2274943978864d89f2d194/presentation.svg)"
 meta:
     id: 91f1ec2b984f291377c2dc488be2ebbefb46dd9a
     parentId: ""
