Commit from HashBrown CMS

--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -1,5 +1,5 @@
 ---
-title: Guide
+title: Guides
 sections:
     -
         template: richTextSection
@@ -8,6 +8,6 @@ meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
     language: en
-permalink: /guide/
+permalink: /guides/
 layout: sectionPage
 ---
