Commit from HashBrown CMS

--- a/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
+++ b/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
@@ -3,6 +3,7 @@ title: 'Getting started: Dashboard'
 sections:
     -
         template: richTextSection
+        text: "# Getting started with the HashBrown Dashboard\nThis is a quick walthrough of the available features in the dashboard\n\n## Layout\nIf there are any active projects on the server, they will be represented in the list under the \"projects\" headline. Every project has their own environments for managing content and users for editing it.\n\nBelow the project list are some basic server diagnostics to help you identify potential problems, or to determine whether the server might be overloaded from hosting too many projects. It will take a lot of projects for that to happen, so most people shouldn't worry about that.\n\n## For content authors\nThe only button relevant for you is the \"CMS\" button. So go ahead and click that to get started.\n\n## For admins\nYou can create new projects, environments and backups with the \"+\" buttons and modify them with the \"...\" dropdown menus.\n\n### Backups\nTo access the backups dialog, click the \"...\" dropdown menu in the top right of a project and click \"backups\". You can then upload, create, restore, download or delete backups. An important thing to keep in mind is that all content on all environments will be replaced when restoring a backup, so it's always a good idea to create a new backup first, in case the changes are drastic.\n\nThe backup only restores settings, content and schemas to the project, it doesn't publish anything. You can republish the content tree in the project CMS."
 meta:
     id: 490cc8c9030417a77f649c8e525df788fc294b3a
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
