Commit from HashBrown CMS

--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -1,5 +1,5 @@
 ---
-title: 'Getting started'
+title: 'Getting started: CMS'
 sections:
     -
         template: richTextSection
@@ -8,6 +8,8 @@ meta:
     id: 41003afd7b3d02a2434516a6243a71eab1d1a30f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
     language: en
-permalink: /guides/getting-started/
+date: '2016-9-5'
+author: 'Putaitu Development'
+permalink: /guides/getting-started-cms/
 layout: sectionPage
 ---
