--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -3,11 +3,13 @@ title: Guides
 sections:
     -
         template: richTextSection
-        text: '[Getting started](/guides/getting-started)'
+        text: "[Getting started with the CMS](/guides/getting-started-cms)  \n[Getting started with the dashboard](/guides/getting-started-dashboard)"
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
     language: en
+date: '2016-9-5'
+author: 'Putaitu Development'
 permalink: /guides/
 layout: sectionPage
 ---
