Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -3,6 +3,10 @@ title: Home
 sections:
     -
         template: richTextSection
+        text: "# HashBrown\nThe pluggable CMS"
+        image: be7ce5f796dbe85a23c1ff105f1a082fb229da2f
+    -
+        template: richTextSection
         text: "## All your projects in one place\n\nEver wonder why you have to run a completely separate CMS for every single project? We did too, and that's why HashBrown exists today. This is the new central brain for your extended project structure.\n\n![fba287ac5db41d6fcc2274943978864d89f2d194](/media/fba287ac5db41d6fcc2274943978864d89f2d194/presentation.svg)\n\n## Made for developers and authors alike\n\nA few painful problems have until now persisted in the world of content management systems:\n\n*   If it's stable, it's dreadful to use\n*   If it's friendly, the backend is a house of cards\n*   And then there are some that are neither friendly nor stable\n\nHashBrown is built from the ground up to tackle this problem by applying industry-standard UI design principles in the frontend and a modularised separation-of-concerns mentality in the backend. Because of the equal attention paid to both aspects of this software, it tackles complex scenarios easily, responds well to user interactions and even looks good doing it.\n\n![b4dfcb5c5e5d1d254bed9983ebaacb2251529552](/media/b4dfcb5c5e5d1d254bed9983ebaacb2251529552/case-hashbrown-screenshot-1.jpg)\n\n## Who should use HashBrown?\n\nIf any of these features sound interesting to you, HashBrown might be for you.\n\n### Remote management\n\nThis is where HashBrown is very different from other CMS'es. Instead of hosting your site, taking up valuable server power caching and crunching numbers for every visitor, it connects to your site remotely and updates a content cache on your site, only when changes are made to the site's content. This means you can build your site in whatever language and framework you like, you can even use a static site generator service like [GitHub Pages](http://github.com/pages) and host your content managed site for free.\n\n### Multiple projects at once\n\nOne instance of HashBrown can manage the content of several sites/apps. How many it can manage is determined by the capacity of the server it's running on.\n\n### Several environments for each project\n\nEvery project has its own unlimited amount of environments. This is very useful if you want testing content separated from live content, or if you for any other reason want to branch your managed content into subsets.\n\n### Multilingual\n\nLanguage support is built into the core, no extra precautions needed when creating custom schemas.\n\n### Plugin support\n\nHashBrown comes prebundled with a few example plugins, mainly to show you how easy it is to write one of your own. So even if you need to manage content for a system that only you are using (maybe it's completely custom), HashBrown can adapt to it.\n\n### Content format consistency\n\nThe backend of HashBrown uses MongoDB for data storage and JSON for serialisation, so at no point will you have to deal with relational database content being serialised and deserialised into and from XML and other non-analogous formats, potentially losing data in the process.\n\n### Painless backups\n\nBacking up and restoring content in document-based databases has always been a snap when compared to the more traditional approaches, and it shines through in HashBrown.\n\n### Small footprint\n\nClunky Windows servers are a dying breed in the server space, and with good reason. HashBrown can run on a small virtual machine on services like [DigitalOcean](http://digitalocean.com) and thereby cost a lot less to host.\n\n### Is and always will be free and open source\n\nThe HashBrown software will never cost you anything, contain binary blobs or in any other way hide its inner workings.\n\n## Who uses HashBrown?  \n\n### Putaitu Productions\n[putaitu.com](http://putaitu.com), [hashbrown.rocks](http://hashbrown.rocks)\n\n### Danish Technological Institute\n[minkarrierealder.dk](http://minkarrierealder.dk)\n\n### Café Sweet Surrender\n[sweetsurrender.dk](http://sweetsurrenderdk.github.io/en/home/)"
 meta:
     id: 91f1ec2b984f291377c2dc488be2ebbefb46dd9a
