Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -2,7 +2,7 @@
 title: Home
 sections:
     -
-        template: richTextSection
+        template: banner
         text: "# HashBrown\nThe pluggable CMS"
         image: be7ce5f796dbe85a23c1ff105f1a082fb229da2f
     -
