Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -3,7 +3,7 @@ title: Home
 sections:
     -
         template: banner
-        text: "# HashBrown\nThe pluggable CMS"
+        text: "# Expose your content to the world in as many ways as you can imagine\nHashBrown lets you create your content in one place and publish it to any amount of connected endpoints"
         image: be7ce5f796dbe85a23c1ff105f1a082fb229da2f
     -
         template: richTextSection
