Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -6,8 +6,8 @@ sections:
         text: "# Expose your ideas in any way you can imagine\n\nHashBrown lets you create your content in one place and publish it to any amount of connected endpoints\n\n[Learn more](#features)"
         image: be7ce5f796dbe85a23c1ff105f1a082fb229da2f
     -
-        template: richTextSection
-        text: "## Getting started\n..."
+        template: buttons
+        text: '## Getting started'
         buttons:
             -
                 text: 'Download source'
