Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -19,7 +19,7 @@ sections:
                 target: _self
     -
         template: images
-        text: '## Who uses HasBrown'
+        text: "## Who uses HashBrown\nWe're new, but already in the field"
         buttons: []
         images:
             - 03fb4a64861018d69cad552c745bad9f630f61ec
