Commit from HashBrown CMS

--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -2,6 +2,10 @@
 title: Guides
 sections:
     -
+        template: banner
+        text: "# Guides\nLearn how to get along with HashBrown"
+        image: be7ce5f796dbe85a23c1ff105f1a082fb229da2f
+    -
         template: richTextSection
         text: "[Getting started with the CMS](/guides/getting-started-cms)  \n[Getting started with the dashboard](/guides/getting-started-dashboard)"
 meta:
