Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -10,7 +10,7 @@ sections:
         text: '## Getting started'
         buttons:
             -
-                text: 'Download the source'
+                text: 'Get the source'
                 href: 'http://github.com/Putaitu/hashbrown-cms'
                 target: _blank
             -
