Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -11,7 +11,7 @@ sections:
         buttons:
             -
                 text: 'Get the source'
-                href: 'http://github.com/Putaitu/hashbrown-cms'
+                href: 'https://github.com/Putaitu/hashbrown-cms/releases/latest'
                 target: _blank
             -
                 text: 'Read the guides'
