Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -3,7 +3,7 @@ title: Home
 sections:
     -
         template: banner
-        text: "# Connect your ideas\n\nCreate once. Publish anywhere.\n\n[Learn more](/features/#remote-management)"
+        text: "# Connect your ideas\n\nCreate once. Publish anywhere.\n\n[Learn more](/features/)"
         image: 83729b0ca06c9ac09771459daf14131278dba307
     -
         template: buttons
