--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -3,15 +3,16 @@ title: Home
 sections:
     -
         template: banner
-        text: "# Connect your ideas\n\nCreate once. Publish anywhere.\n\n[Learn more](/features/)"
-        image: 83729b0ca06c9ac09771459daf14131278dba307
+        text: "# Connect your ideas\n\nCreate your content in one place and publish it to anywhere\n\n[Learn more](#features)"
+        image: 38b72c0de9fe7d4924067dd7528bf1f8c54fa0d1
+        theme: light
     -
         template: buttons
         text: '## Getting started'
         buttons:
             -
-                text: 'Get the source'
-                href: 'https://github.com/Putaitu/hashbrown-cms/releases/latest'
+                text: 'Download the source'
+                href: 'http://github.com/Putaitu/hashbrown-cms'
                 target: _blank
             -
                 text: 'Read the guides'
@@ -33,7 +34,7 @@ meta:
     parentId: ""
     language: en
 date: '2016-9-5'
-author: 'Putaitu Development'
+author: Unknown
 permalink: /
 layout: sectionPage
 ---
