Commit from HashBrown CMS

--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -3,7 +3,7 @@ title: Home
 sections:
     -
         template: banner
-        text: "# Connect your ideas\n\nCreate your content in one place and publish it to anywhere\n\n[Learn more](#features)"
+        text: "# Connect your ideas\n\nCreate once. Publish anywhere.\n\n[Learn more](/features/)"
         image: 38b72c0de9fe7d4924067dd7528bf1f8c54fa0d1
         theme: light
     -
@@ -11,8 +11,8 @@ sections:
         text: '## Getting started'
         buttons:
             -
-                text: 'Download the source'
-                href: 'http://github.com/Putaitu/hashbrown-cms'
+                text: 'Get the source'
+                href: 'https://github.com/Putaitu/hashbrown-cms/releases/latest'
                 target: _blank
             -
                 text: 'Read the guides'
@@ -34,7 +34,7 @@ meta:
     parentId: ""
     language: en
 date: '2016-9-5'
-author: Unknown
+author: 'Putaitu Development'
 permalink: /
 layout: sectionPage
 ---
