Commit from HashBrown CMS

--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -4,8 +4,8 @@ sections:
     -
         template: banner
         text: "# Guides\nLearn how to get along with HashBrown"
-        image: be7ce5f796dbe85a23c1ff105f1a082fb229da2f
-        theme: dark
+        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
+        theme: light
     -
         template: richTextSection
         text: "[Getting started with the CMS](/guides/getting-started-cms)  \n[Getting started with the dashboard](/guides/getting-started-dashboard)"
@@ -14,7 +14,7 @@ meta:
     parentId: ""
     language: en
 date: '2016-9-5'
-author: Unknown
+author: 'Putaitu Development'
 permalink: /guides/
 layout: sectionPage
 ---
