--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -5,7 +5,7 @@ sections:
         template: banner
         text: "# Guides\nLearn how to get along with HashBrown"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
-        theme: light
+        theme: dark
     -
         template: richTextSection
         text: "[Getting started with the CMS](/guides/getting-started-cms)  \n[Getting started with the dashboard](/guides/getting-started-dashboard)"
