--- a/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
+++ b/content/en/91f1ec2b984f291377c2dc488be2ebbefb46dd9a.md
@@ -11,21 +11,22 @@ sections:
         text: '## Getting started'
         buttons:
             -
-                text: 'Get the source'
+                text: 'Take me through it'
+                href: /getting-started/
+                target: _self
+        links:
+            -
+                text: Source
                 href: 'https://github.com/Putaitu/hashbrown-cms/releases/latest'
                 target: _blank
             -
-                text: 'Read the guides'
+                text: Guides
                 href: /guides/
                 target: _self
-    -
-        template: images
-        text: "## Who uses HashBrown?\nWe're new, but already in the field"
-        buttons: []
-        images:
-            - 03fb4a64861018d69cad552c745bad9f630f61ec
-            - 940b831e3c5e1d5368234f8512574b8deaf3cb1f
-            - 6c700d8ccb39be74ea025a6eb1ffead2964f7e42
+            -
+                text: Documentation
+                href: /docs/
+                target: _self
     -
         template: richTextSection
         text: "## Features\n\n### Remote management\n\nSeparate your concerns with a truly modern approach to content management. Your websites won't know what hit them.\n\n### Multiple projects at once\n\nWhy worry about several CMS'es, when you only need one?\n\n### Several environments for each project\n\nWe get it. You need to test your content before you go live.\n\n### Multilingual\n\nRemember the last time you used a truly elegant localisation solution in a CMS? We don't either.\n\n### Plugin support\n\nIf your needs aren't met at the core level, you can add anything you can imagine.\n\n### Content format consistency\n\nWhen you are passing complex, format-agnostic data around, document databases are the way to go. HashBrown knows what's up.\n\n### Painless backups\n\nHashBrown has your back in seconds.\n\n### Small footprint\n\nYou could probably run HashBrown on your toaster at home."
@@ -34,7 +35,7 @@ meta:
     parentId: ""
     language: en
 date: '2016-9-5'
-author: 'Putaitu Development'
+author: Unknown
 permalink: /
 layout: sectionPage
 ---
