--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -4,18 +4,32 @@ description: 'Get started with HashBrown CMS'
 sections:
     -
         template: banner
-        text: "# Getting started\nLet us take you through it"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
+        text: "# Getting started  \n\nLet us take your through it\n"
     -
         template: richTextSection
-        text: "## Download the source  \n\n### Regular download\nYou can always pick up the latest HashBrown code [here](https://github.com/Putaitu/hashbrown-cms/releases/latest).\n\n### Using GIT\nIf you'd rather stay up to date with GIT, just clone the 'stable' branch:  \n\n~~~\ngit clone https://github.com/Putaitu/hashbrown-cms.git -b stable --single-branch\n~~~"
+        text: "## Dependencies\nMake sure you have [node.js](http:/nodejs.org) and [MongoDB](https://www.mongodb.com/download-center) installed."
     -
         template: richTextSection
-        text: "## Get the dependencies  \n\nAs with most node.js apps, there are couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:\n\n~~~\ncd ./hashbrown-cms\nnpm install\n~~~\n"
+        text: "## Download the source  \n\n### Download .zip\nYou can always pick up the latest HashBrown code [here](https://github.com/Putaitu/hashbrown-cms/archive/stable.zip).\n\n### Download with  GIT\nIf you'd rather stay up to date with GIT, just clone the 'stable' branch:  \n\n~~~\ngit clone https://github.com/Putaitu/hashbrown-cms.git -b stable --single-branch\n~~~"
     -
         template: richTextSection
-        text: "## Create your user account  \n\nIn order for you to administrate HashBrown, there needs to be one initial user:\n\n~~~\nnode hashbrown.js create-user u=username p=password admin=true\n~~~"
+        text: "## Get the node.js dependencies  \n\nAs with most node.js apps, there are couple dependencies to get before you can fire up HashBrown. Go into your installation directory and pull them from NPM:\n\n~~~\ncd ./hashbrown-cms\nnpm install\n~~~\n"
+    -
+        template: richTextSection
+        text: "## Create your user account  \n\nThere needs to be at least one admin user:\n\n~~~\nnode hashbrown.js create-user u=username p=password admin=true\n~~~"
+    -
+        template: richTextSection
+        text: "## Run it  \n\nRun HashBrown as superuser and visit [http://localhost](http://localhost) to see it in action.\n\n~~~\nsudo node hashbrown.js\n~~~"
+    -
+        template: buttons
+        text: "## Done!\nHashBrown should now be up and running.  \nCheck out the guides to get started."
+        buttons:
+            -
+                text: Guides
+                href: /guides/
+                target: _self
 meta:
     id: efbd77b7728265a8cce1981981a3ec4f93195595
     parentId: ""
