--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -4,7 +4,13 @@ description: 'Creating your first page'
 sections:
     -
         template: richTextSection
-        text: "## Setting up a connection  \n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n1. Click on the \"Connections\" tab\n2. Right click in the pane and select \"Create new\"\n3. Name your connection something fancy, how about \"Awesome Connection\"?\n\n### Configure it  \n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n1. Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n2. Back in the connection settings, check \"is local\"\n3. Type in the local path to the project (remember to end it with a \"/\")\n\n\n## Setting up a schema  \n\nFirst, we are going to configure how our page behaves. This is done through a [Schema](/docs/schemas/).  \n\n### Create it  \n\n1. Go to the \"Schemas\" tab\n2. Expand the \"Content base\" schema\n3. Right click the \"Page\" schema and click \"Create new\"\n\n### Configure main properties\n1. Pick a fancy name for your schema, like \"Awesome Page\"\n2. Pick a fancy icon to go with it\n3. Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n### Configure field properties  \n\n1. Type this into the \"field properties\" section:\n\n~~~\n{\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~\n\n## Creating the content  \n\nNow that we have set up the schema, we can create some [Content](/docs/content/) based on it.\n\n1. Go to the \"Content\" tab\n2. Right click in the pane and select \"Create new\"\n3. Pick your schema and click \"Create\"\n4. Right click the newly created content in the list and click \"Settings\"\n5. Switch on the connection you created under \"Publising\"\n6. Type in \"Hello World\" in the \"Title\" field\n7. Type in \"Wear all the hats!\" (or your own catchphrase) in the \"Text\" field\n8. Make sure the \"URL\" field reads \"/hello-world/\"\n9. Click \"Save & publish\" \n10. Visit [http://localhost:4000/hello-world/](http://localhost:4000/hello-world/) in your browser"
+        text: "## Setting up a connection  \n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n1. Click on the \"Connections\" tab\n2. Right click in the pane and select \"Create new\"\n3. Name your connection something fancy, how about \"Awesome Connection\"?\n\n### Configure it  \n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n1. Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n2. Back in the connection settings, check \"is local\"\n3. Type in the local path to the project (remember to end it with a \"/\")\n"
+    -
+        template: richTextSection
+        text: "## Setting up a schema  \n\nFirst, we are going to configure how our page behaves. This is done through a [Schema](/docs/schemas/).  \n\n### Create it  \n\n1. Go to the \"Schemas\" tab\n2. Expand the \"Content base\" schema\n3. Right click the \"Page\" schema and click \"Create new\"\n\n### Configure main properties\n1. Pick a fancy name for your schema, like \"Awesome Page\"\n2. Pick a fancy icon to go with it\n3. Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n### Configure field properties  \n\n1. Type this into the \"field properties\" section:\n\n~~~\n{\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~"
+    -
+        template: richTextSection
+        text: "## Creating the content  \n\nNow that we have set up the schema, we can create some [Content](/docs/content/) based on it.\n\n1. Go to the \"Content\" tab\n2. Right click in the pane and select \"Create new\"\n3. Pick your schema and click \"Create\"\n4. Right click the newly created content in the list and click \"Settings\"\n5. Switch on the connection you created under \"Publising\"\n6. Type in \"Hello World\" in the \"Title\" field\n7. Type in \"Wear all the hats!\" (or your own catchphrase) in the \"Text\" field\n8. Make sure the \"URL\" field reads \"/hello-world/\"\n9. Click \"Save & publish\" \n10. Visit [http://localhost:4000/hello-world/](http://localhost:4000/hello-world/) in your browser"
 meta:
     id: ee68628a08fe5010a35d861b7f9bd1c23de82adc
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
