--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -3,6 +3,11 @@ title: 'Hello World'
 description: 'Creating your first page'
 sections:
     -
+        template: banner
+        text: "# Hello world  \n\nCreatnig your first page"
+        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
+        theme: dark
+    -
         template: richTextSection
         text: "## Setting up a connection  \n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n1. Click on the \"Connections\" tab\n2. Right click in the pane and select \"Create new\"\n3. Name your connection something fancy, how about \"Awesome Connection\"?\n\n### Configure it  \n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n1. Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n2. Back in the connection settings, check \"is local\"\n3. Type in the local path to the project (remember to end it with a \"/\")\n"
     -
