Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -27,7 +27,11 @@ sections:
         text: "## Done!\nHashBrown should now be up and running.  \nCheck out the guides to get started."
         buttons:
             -
-                text: Guides
+                text: 'Hello world'
+                href: /guides/hello-world/
+                target: _self
+            -
+                text: 'All guides'
                 href: /guides/
                 target: _self
 meta:
