Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -24,7 +24,7 @@ sections:
         text: "## Run it  \n\nRun HashBrown as superuser and visit [http://localhost](http://localhost) to see it in action.\n\n~~~\nsudo node hashbrown.js\n~~~"
     -
         template: buttons
-        text: "## Done!\nHashBrown should now be up and running.  \nCheck out the guides to get started."
+        text: "## Done!\nHashBrown should now be up and running.  \nCheck out the guides to dive in."
         buttons:
             -
                 text: 'Hello world'
