--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -4,7 +4,7 @@ description: 'Creating your first page'
 sections:
     -
         template: banner
-        text: "# Hello world  \n\nCreatnig your first page"
+        text: "# Hello world  \n\nCreating your first page"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
     -
