Commit from HashBrown CMS

--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -16,6 +16,14 @@ sections:
     -
         template: richTextSection
         text: "## Creating the content  \n\nNow that we have set up the schema, we can create some [Content](/docs/content/) based on it.\n\n1. Go to the \"Content\" tab\n2. Right click in the pane and select \"Create new\"\n3. Pick your schema and click \"Create\"\n4. Right click the newly created content in the list and click \"Settings\"\n5. Switch on the connection you created under \"Publising\"\n6. Type in \"Hello World\" in the \"Title\" field\n7. Type in \"Wear all the hats!\" (or your own catchphrase) in the \"Text\" field\n8. Make sure the \"URL\" field reads \"/hello-world/\"\n9. Click \"Save & publish\" \n10. Visit [http://localhost:4000/hello-world/](http://localhost:4000/hello-world/) in your browser"
+    -
+        template: buttons
+        text: "## Done and dusted!  \n\nNot too bad, was it?  \nCheck out the other guides to learn more."
+        buttons:
+            -
+                text: Guides
+                href: /guides/
+                target: _self
 meta:
     id: ee68628a08fe5010a35d861b7f9bd1c23de82adc
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
