--- a/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
+++ b/content/en/ee68628a08fe5010a35d861b7f9bd1c23de82adc.md
@@ -15,7 +15,7 @@ sections:
         text: "## Setting up a connection\n\nIn order to publish [Content](/docs/content/) and use [Templates](/docs/templates/) and [Media](/docs/media/), we need to set up a [Connection](/docs/connections).\n\n### Create it\n\n*   Click on the \"Connections\" tab\n*   Right click in the pane and select \"New connection\"\n*   Name your connection something cool, we suggest \"Awesome Connection\"\n\n### Configure it\n\nThere are a couple of options for connection types, but let's start with a [GitHub Pages](https://pages.github.com/) connection. If you're unfamiliar with GitHub Pages, it's an online service based on [Jekyll](http://jekyllrb.com/) that generates static sites rather than serving them actively. It's a huge money saver on hosting, because it's, well, free. Moving on:\n\n*   Download the [HashBrown GitHub Pages Boilerplate](https://github.com/Putaitu/hashbrown-boilerplate-github-pages/archive/latest.zip) and extract it somewhere.\n*   Go to it in your terminal and start the Jekyll server:  \n~~~\ncd ./hashbrown-github-pages-boilerplate\njekyll serve\n~~~\n\n*   Back in the connection settings, turn the \"Local\" switch on  \n*   Type in the local path to the project (remember to end it with a \"/\")  \n* Click \"Save\"  \n\n### Set up providers\n\nIn order for us to use [Templates](/docs/templates/) and [Media](/docs/media/), select your newly created connection from the dropdowns in the top of the connections list."
     -
         template: richTextSection
-        text: "## Setting up a schema\n\nNow we are going to configure how our [Content](/docs/content/) behaves. This is done through a [Schema](/docs/schemas/).\n\n### Create it\n\n*   Go to the \"Schemas\" tab\n*   Expand the \"Content base\" schema\n*   Right click the \"Page\" schema and click \"New child schema\"\n\n### Configure main properties\n\n*   Pick a fancy name for your schema, like \"Awesome Page\"\n*   Pick a fancy icon to go with it\n*   Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n### Configure field properties\n\n*   Type this into the \"field properties\" section:\n\n~~~\n{\n    \"template\": {\n        \"label\": \"Template\",\n        \"schemaId\": \"templateReference\",\n        \"config\": {\n            \"allowedTemplates\": [\"awesomePage\"]\n        }\n    },\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~\n\n### Quick explanation\n\n*   The \"template\" and \"text\" keys are used to access the respective field values later on.\n*   The \"label\" is what the author sees in the CMS.\n*   The \"schemaId\" is the [Field Schema](/docs/schemas/fields)\n*   The \"tabId\" is the tab under which the field will appear\n*   The \"config\" is a configuration value applicable to some field schemas, in this case limiting the applicable page templates to the \"awesomePage\" template"
+        text: "## Setting up a schema\n\nNow we are going to configure how our [Content](/docs/content/) behaves. This is done through a [Schema](/docs/schemas/).\n\n### Create it\n\n*   Go to the \"Schemas\" tab\n*   Expand the \"Content base\" schema\n*   Right click the \"Page\" schema and click \"New child schema\"\n\n### Configure main properties\n\n*   Pick a fancy name for your schema, like \"Awesome Page\"\n*   Pick a fancy icon to go with it\n*   Set the default tab to \"Content\", which is where our custom properties will be. You can create more tabs later.\n\n### Configure field properties\n\n*   Type this into the \"field properties\" section:\n\n~~~\n{\n    \"template\": {\n        \"label\": \"Template\",\n        \"schemaId\": \"templateReference\",\n        \"config\": {\n            \"allowedTemplates\": [\"awesomePage\"]\n        }\n    },\n    \"text\": {\n        \"label\": \"Text\",\n        \"schemaId\": \"string\",\n        \"tabId\": \"content\"\n    }\n}\n~~~\n\n### Quick explanation\n\n*   The \"template\" and \"text\" keys are used to access the respective field values later on.\n*   The \"label\" is the key name the author sees in the CMS.\n*   The \"schemaId\" is the [Field Schema](/docs/schemas/fields)\n*   The \"tabId\" is the tab under which the field will appear\n*   The \"config\" is a configuration value applicable to some field schemas, in this case limiting the applicable page templates to the \"awesomePage\" template"
     -
         template: richTextSection
         text: "## Creating the content  \n\nNow that we have set up the schema, we can create some [Content](/docs/content/) based on it.  \n\n- Go to the \"Content\" tab\n- Right click in the pane and select \"Create new\"\n- Pick your schema and click \"Create\"\n- Right click the newly created content in the list and click \"Settings\"\n- Switch on the connection you created under \"Publising\"\n- Type in \"Hello World\" in the \"Title\" field\n- Type in \"Wear all the hats!\" (or your own catchphrase) in the \"Text\" field\n- Make sure the \"URL\" field reads \"/hello-world/\"\n- Click \"Save & publish\" \n- Visit [http://localhost:4000/hello-world/](http://localhost:4000/hello-world/) in your browser"
