Commit from HashBrown CMS

--- a/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
+++ b/content/en/efbd77b7728265a8cce1981981a3ec4f93195595.md
@@ -9,7 +9,7 @@ sections:
         text: "# Getting started  \n\nLet us take your through it\n"
     -
         template: richTextSection
-        text: "## Dependencies\nMake sure you have [node.js](http:/nodejs.org) and [MongoDB](https://www.mongodb.com/download-center) installed."
+        text: "## Dependencies\nMake sure you have [node.js](http://nodejs.org) and [MongoDB](https://www.mongodb.com/download-center) installed."
     -
         template: richTextSection
         text: "## Download the source  \n\n### Download .zip\nYou can always pick up the latest HashBrown code [here](https://github.com/Putaitu/hashbrown-cms/archive/stable.zip).\n\n### Download with  GIT\nIf you'd rather stay up to date with GIT, just clone the 'stable' branch:  \n\n~~~\ngit clone https://github.com/Putaitu/hashbrown-cms.git -b stable --single-branch\n~~~"
