--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -6,6 +6,8 @@ sections:
         text: "# Guides\nLearn how to get along with HashBrown"
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
+    -
+        includeGrandchildren: true
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
