--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -8,6 +8,7 @@ sections:
         theme: dark
     -
         includeGrandchildren: true
+        template: childLinks
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
