--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -7,7 +7,7 @@ sections:
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
     -
-        includeGrandchildren: true
+        includeGrandchildren: false
         template: childLinks
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
