--- a/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
+++ b/content/en/bf70856caed6633b734d5b0e7b61a651305571f1.md
@@ -7,8 +7,9 @@ sections:
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         theme: dark
     -
+        template: richTextSection
         includeGrandchildren: false
-        template: childLinks
+        text: "## Beginner\n- [Hello world](/guides/hello-world)\n- [Introduction to the dashboard](/guides/introduction-to-the-dashboard)\n- [Introduction to the CMS](/guides/introduction-to-the-cms)\n"
 meta:
     id: bf70856caed6633b734d5b0e7b61a651305571f1
     parentId: ""
