--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -1,5 +1,5 @@
 ---
-title: 'Getting started: CMS'
+title: 'Introduction to the CMS'
 sections:
     -
         template: richTextSection
@@ -10,6 +10,6 @@ meta:
     language: en
 date: '2016-9-5'
 author: 'Putaitu Development'
-permalink: /guides/getting-started-cms/
+permalink: /guides/introduction-to-the-cms/
 layout: sectionPage
 ---
