Commit from HashBrown CMS

--- a/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
+++ b/content/en/490cc8c9030417a77f649c8e525df788fc294b3a.md
@@ -1,5 +1,5 @@
 ---
-title: 'Getting started: Dashboard'
+title: 'Introduction to the dashboard'
 sections:
     -
         template: richTextSection
@@ -10,6 +10,6 @@ meta:
     language: en
 date: '2016-9-11'
 author: 'Putaitu Development'
-permalink: /guides/getting-started-dashboard/
+permalink: /guides/introduction-to-the-dashboard/
 layout: sectionPage
 ---
