--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -2,8 +2,42 @@
 title: 'Introduction to the CMS'
 sections:
     -
+        template: banner
+        includeGrandchildren: false
+        image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
+        text: '# Introduction to the CMS'
+        theme: light
+    -
         template: richTextSection
-        text: "# Getting started with the HashBrown CMS\n\nHere's a quick overview of what you're seeing when you first open up the CMS. Some of these sections are \"scoped\", meaning that only certain users will have access to them.\n\n### Content\n\nWhere all of the authored work is. The content is a hierarchical tree of nodes that can contain text and media file references, in both simple and complex structures. It all depends on how you set it up.\n\n### Media\n\nAn asset library for your hosted files, such as images, videos, PDFs and whatnot.\n\n### Forms\n\nIf you need an input form on your website, you can create the model for it here and see a list of the user submitted input.\n\n### Connections (scoped)\n\nA list of endpoints and resources for your content. Connections can be set up to publish your content to other servers, provide statically hosted media and serve rendering templates.\n\n### Schemas (scoped)\n\nA library of content structures. Here you define how your editable content looks and behaves. You can define schemas for both content nodes and fields.\n\n### Users (scoped)\n\nAll of the users connected to this project. Here you can edit scopes and remove/add new users.\n\n### Settings (scoped)\n\nThe global project settings, such as which languages are in use."
+        text: 'This is a quick overview of what you''re seeing when you first open up the CMS. Some of these sections are "scoped", meaning that only certain users will have access to them.'
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Content\n\nWhere all of the authored work is. The content is a hierarchical tree of nodes that can contain text and media file references, in both simple and complex structures. It all depends on how you set it up."
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Media\n\nAn asset library for your hosted files, such as images, videos, PDFs and whatnot."
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Forms\n\nIf you need an input form on your website, you can create the model for it here and see a list of the user submitted input.\n"
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Connections (scoped)\n\nA list of endpoints and resources for your content. Connections can be set up to publish your content to other servers, provide statically hosted media and serve rendering templates.\n"
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Schemas (scoped)\n\nA library of content structures. Here you define how your editable content looks and behaves. You can define schemas for both content nodes and fields."
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Users (scoped)\n\nAll of the users connected to this project. Here you can edit scopes and remove/add new users."
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Settings (scoped)\n\nThe global project settings, such as which languages are in use."
 meta:
     id: 41003afd7b3d02a2434516a6243a71eab1d1a30f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
