Commit from HashBrown CMS

--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -6,14 +6,14 @@ sections:
         includeGrandchildren: false
         image: 50d05eee9088c589bfd5a5a3a3043c0ebcc4972b
         text: '# Introduction to the CMS'
-        theme: light
+        theme: dark
     -
         template: richTextSection
         text: 'This is a quick overview of what you''re seeing when you first open up the CMS. Some of these sections are "scoped", meaning that only certain users will have access to them.'
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## Content\n\nWhere all of the authored work is. The content is a hierarchical tree of nodes that can contain text and media file references, in both simple and complex structures. It all depends on how you set it up."
+        text: "## Content pane\n\nThis is where all of the authored work, aka. [Content](/docs/content/), is. From here you can create, delete, move, rename, copy and paste content to your heart's desire."
     -
         template: richTextSection
         includeGrandchildren: false
