Commit from HashBrown CMS

--- a/content/en/c1dd2e6f02010be4e85db1ba1fae620c77f6d58e.md
+++ b/content/en/c1dd2e6f02010be4e85db1ba1fae620c77f6d58e.md
@@ -10,7 +10,7 @@ sections:
     -
         template: richTextSection
         includeGrandchildren: false
-        text: "## External resources\n\nTemplates, like [Media](/docs/media/), are external resources, measning that they are provided through [Connections](/docs/connections/). The templates are hosted on your remote website, and are only accessible to HashBrown as a list of names that can be picked from dropdown menus."
+        text: "## External resources\n\nTemplates, like [Media](/docs/media/), are external resources, meaning that they are provided through [Connections](/docs/connections/). The templates are hosted on your remote website, and are only accessible to HashBrown as a list of names that can be picked from dropdown menus."
 meta:
     id: c1dd2e6f02010be4e85db1ba1fae620c77f6d58e
     parentId: 1d72ac4a3c7e348ef20717698eb87b82976bca36
