Commit from HashBrown CMS

--- a/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
+++ b/content/en/41003afd7b3d02a2434516a6243a71eab1d1a30f.md
@@ -38,6 +38,10 @@ sections:
         template: richTextSection
         includeGrandchildren: false
         text: "## Settings (scoped)\n\nThe global project settings, such as which languages are in use."
+    -
+        template: richTextSection
+        includeGrandchildren: false
+        text: "## Main menu  \n\nThe main menu just has a few menu points:  \n- The user menu, for editing your info or logging out  \n- The dashboard link, for returning to the dashboard  \n- The language picker, if more then one language has been set up in the \"Settings\" pane"
 meta:
     id: 41003afd7b3d02a2434516a6243a71eab1d1a30f
     parentId: bf70856caed6633b734d5b0e7b61a651305571f1
